--- a/index.html
+++ b/index.html
@@ -34,6 +34,14 @@
 			<canvas id="juego_canvas" style="background-color:#E82239" ></canvas>
 			<canvas id="patron_canvas" style="background-color:#90D0AE" ></canvas>
 
+			<div id="winner_face" class="face">
+				<img src="img/faces/happy_2.png">
+			</div>
+
+			<div id="loser_face" class="face">
+				<img src="img/faces/sad_1.png">
+			</div>
+
 			<div id="timer_container">
 				<div id="timer_juego"></div>
 			</div>
