Cambios procedural. diego

--- a/index.html
+++ b/index.html
@@ -46,12 +46,17 @@
 				<div id="timer_juego"></div>
 			</div>
 
+			<div id="diseno_procedural">
+				<img src="img/algortimo.png">
+			</div>
+
 			<div id="onOffGrid" >Poner retícula</div>
 			<div id="resetPattern" >Cambiar patrón</div>
-
 			<div id="grid4" >4x4</div>
 			<div id="grid8" >8x8</div>
 			<div id="grid16" >16x16</div>
+
+			<div id="procedural_toggle">Diseño procedural</div>
 		</div>
 	</body>
 
