Camios mios. Diego

--- a/index.html
+++ b/index.html
@@ -50,13 +50,12 @@
 				<img src="img/algortimo.png">
 			</div>
 
-			<div id="onOffGrid" >Poner retícula</div>
-			<div id="resetPattern" >Cambiar patrón</div>
-			<div id="grid4" >4x4</div>
-			<div id="grid8" >8x8</div>
-			<div id="grid16" >16x16</div>
-
-			<div id="procedural_toggle">Diseño procedural</div>
+			<div class="controls" id="onOffGrid" >Poner retícula</div>
+			<div class="controls" id="resetPattern" >Cambiar patrón</div>
+			<div class="controls" id="grid4" >4x4</div>
+			<div class="controls" id="grid8" >8x8</div>
+			<div class="controls" id="grid16" >16x16</div>
+			<div class="controls" id="procedural_toggle">Diseño procedural</div>
 		</div>
 	</body>
 
