cambios css e imagenes.dzoara

--- a/index.html
+++ b/index.html
@@ -38,13 +38,12 @@
 				<div id="timer_juego"></div>
 			</div>
 
-			<div id="onOffGrid" >Poner retícula</div>
-			<div id="resetPattern" >Cambiar patrón</div>
-
-			<div id="grid4" >4x4</div>
-			<div id="grid8" >8x8</div>
-			<div id="grid16" >16x16</div>
-		</div>
+			<img id="onOffGrid" class="boton" src="img/b_ret_1.png" click="img/b_ret_2.png" out="img/b_ret_1.png" />
+			<img id="resetPattern" class="boton" src="img/b_cambiar_1.png" click="img/b_cambiar_2.png" out="img/b_cambiar_1.png" />
+			<img id="grid4" class="boton b_grid" src="img/b_4_1.png" click="img/b_4_2.png" out="img/b_4_1.png" />
+			<img id="grid8" class="boton b_grid" src="img/b_8_1.png" click="img/b_8_2.png" out="img/b_8_1.png" />
+			<img id="grid16" class="boton b_grid" src="img/b_16_1.png" click="img/b_16_2.png" out="img/b_16_1.png" />
+			<img id="diseno_procedural" class="boton" src="img/b_diseno_1.png" />
 	</body>
 
 </html>
