--- a/index.html
+++ b/index.html
@@ -29,6 +29,19 @@
 
 	<body>
 		<div id="contenido" >
+
+			<div id="nav_incompatible" >
+				<img src="img/back2.png">
+				<div id="mensaje_incomp"><span>¡Ups!</span>Tu versión de navegador no es compatible con esta aplicación.<br><br>Exploradores recomendados:</div>
+				<div id="nav_icons">
+					<img src="img/chorme_icon-01.png">
+					<img src="img/firefox_icon-01.png">
+					<img src="img/explorer_icon-01.png">
+					<img src="img/safari_icon-01.png">
+				</div>
+			</div>
+
+
 			<img id="portada" src="img/portada.png" alt="trail diseño medios digitales"/>
 			
 			<canvas id="juego_canvas" style="background-color:#E82239" ></canvas>
