--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
 		<!-- MAIN -->
 		<script type="text/javascript" src="js/trail.js"></script>
 
-		<!-- STYLESHEETS -->
-		<link rel="stylesheet" type="text/css" href="css/trail.css">	
+		<!-- STYLESHEETS & FONTS-->
+		<link rel="stylesheet" type="text/css" href="css/trail.css">
+		<link href='http://fonts.googleapis.com/css?family=Roboto:400,300,500,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>	
 	</head>
 
 	<body>
@@ -32,9 +33,9 @@
 
 			<div id="nav_incompatible" >
 				<img src="img/back2.png">
-				<div id="mensaje_incomp"><span>¡Ups!</span>Tu versión de navegador no es compatible con esta aplicación.<br><br>Exploradores recomendados:</div>
+				<div id="mensaje_incomp"><span>¡Ups!</span><br><br>Tu versión de navegador no es compatible con esta aplicación.<br><br>Exploradores recomendados:</div>
 				<div id="nav_icons">
-					<img src="img/chorme_icon-01.png">
+					<img src="img/chrome_icon-01.png">
 					<img src="img/firefox_icon-01.png">
 					<img src="img/explorer_icon-01.png">
 					<img src="img/safari_icon-01.png">
