ajuste iconos nav y redacción .dzoara

--- a/disclaimer.html
+++ b/disclaimer.html
@@ -19,9 +19,9 @@
 				width: 320px;
 				height: 155px;
 				left: 335px;
-				top: 61px;
+				top: 55px;
 				font-family: 'Roboto', sans-serif;
-				font-weight: 500;
+				font-weight: 400;
 				font-size: 15px;
 				color: #E82239;
 			}
@@ -34,7 +34,7 @@
 
 			#nav_icons_2 {
 				position: absolute;
-				top: 298px;
+				top: 300px;
 				left: 325px;
 				width: 350px;
 				height: 95px;
@@ -59,7 +59,7 @@
 <body>
 	<div id="nav_incompatible" >
 			<img src="img/back2.png">
-			<div id="mensaje_incomp"><span>¡Ups!</span><p>Tu versión de navegador no es compatible con esta aplicación.</p><p>Esta aplicación utiliza nuevos estándares de HTML5 como WebAudioApi y Canvas para gráficos interactivos.</p>
+			<div id="mensaje_incomp"><span>¡Ups!</span><p>Tu versión de navegador no es compatible con esta aplicación.</p><p>Trial V1.0 utiliza nuevos estándares de HTML5 como WebAudioApi y Canvas para gráficos interactivos.</p>
 			<p>Descarga las últimas versiones:</p></div>
 			<div id="nav_icons_2">
 				<a target="_blank" href="http://www.mozilla.org/es-MX/firefox/new/"><img src="img/firefox_icon-01.png"></a>
