--- a/disclaimer.html
+++ b/disclaimer.html
@@ -1,4 +1,5 @@
-<head>
+<html>
+	<head>
 		<title>Trail</title>
 		<meta charset="utf-8">
 
@@ -53,18 +54,26 @@
 
 
 		</style>
+	</head>
 
-</head>
-
-<body>
-	<div id="nav_incompatible" >
+	<body>
+		<div id="nav_incompatible" >
 			<img src="img/back2.png">
-			<div id="mensaje_incomp"><span>¡Ups!</span><p>Tu versión de navegador no es compatible con esta aplicación.</p><p>Esta aplicación utiliza nuevos estándares de HTML5 como WebAudioApi y Canvas para gráficos interactivos.</p>
-			<p>Descarga las últimas versiones:</p></div>
-			<div id="nav_icons_2">
-				<a target="_blank" href="http://www.mozilla.org/es-MX/firefox/new/"><img src="img/firefox_icon-01.png"></a>
-				<a target="_blank" href="http://www.google.com.mx/intl/es-419/chrome/browser/"><img src="img/chrome_icon-01.png"></a>
+			<div id="mensaje_incomp">
+				<span>¡Ups!</span>
+				<p>Tu versión de navegador no es compatible con esta aplicación.</p>
+				<p>Esta aplicación utiliza nuevos estándares de HTML5 como WebAudioApi y Canvas para gráficos interactivos.</p>
+				<p>Descarga las últimas versiones:</p>
 			</div>
-	</div>
-
-</body>
+			<div id="nav_icons_2">
+				<a target="_blank" href="http://www.mozilla.org/es-MX/firefox/new/">
+					<img src="img/firefox_icon-01.png">
+				</a>
+				<a target="_blank" href="http://www.google.com.mx/intl/es-419/chrome/browser/">
+					<img src="img/chrome_icon-01.png">
+				</a>
+			</div>
+		</div>
+	</body>
+	
+<html>
