Optimizacion Audio en Safari. Diego

--- a/game.html
+++ b/game.html
@@ -5,6 +5,7 @@
 
 		<!-- JAVASCRIPT -->
 		<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+		<script type="text/javascript" src="js/BrowserDetect.js"></script>
 
 		<!-- SOUND -->
 		<script type="text/javascript" src="js/subcollider-min.js"></script>
