integro pantalla diseño procedural.dzoara

--- a/index.html
+++ b/index.html
@@ -68,6 +68,12 @@
 			</div>
 
 			<div id="diseno_procedural" class="pantallas">
+				<img src="img/back3.png">
+				<div id="logica_juego">
+					<span>16 módulos y algortimo con 16 reglas:</span>
+					<p>(1) sin conexiones, (2) conexión a la derecha, (3) conexión debajo, (4) conexiones arriba e izquierda, (5) conexión a la izquierda, (6) conexiones izquierda y derecha, (7) conexiones izquierda y debajo, (8) conexiones izquierda, derecha y debajo, (9) conexión arriba, (10) conexiones arriba y derecha, (11) conexiones arriba y debajo, (12) conexiones arriba, derecha y debajo, (13) conexiones arriba e izquierda, (14) conexiones arriba, izquierda y derecha, (15) conexiones arriba, debajo e izquierda, (16) conexiones arriba, derecha, debajo e izquierda.</p>
+					<p>Algortimo inspirado en el libro Diseño Generativo, autores: Hartmut Bohnacker, Benedikt Groß, Julia Laub, Claudius Lazzeroni (editor) Librerias de Sintesis de Audio para Javascript timbre.js y Audio MIDI soundfont.js.</p>
+				</div>
 			</div>
 
 			<img id="onOffGrid" class="boton" src="img/b_ret_1.png" click="img/b_ret_2.png" out="img/b_ret_1.png" />
