Bug en la peticion AJAX. Diego

--- a/index.html
+++ b/index.html
@@ -11,20 +11,23 @@
 			// Escribimos una visita en la base de datos
 			$.ajax({
 				type: "GET",
-				url: "http://laborar.co/register_visit_trail.php",
+				url: "http://www.laborar.co/register_visit_trail.php",
 				dataType: "json",
-				success: function( reponse ) {
-					// Iniciamos la deteccion de browsers
-					BrowserDetect.init();
-
-					var host = location.protocol + "//" + location.hostname + location.pathname;
-					if(BrowserDetect.browser == "Explorer" || (BrowserDetect.browser == "Mozilla" && BrowserDetect.version == 11)) {
-						window.location = host + "disclaimer.html";
-					} else {
-						window.location = host + "game.html";
-					}
-				}
+				xhrFields: {
+					withCredentials: false
+				},
+				async: false
 			});
+
+			// Iniciamos la deteccion de browsers
+			BrowserDetect.init();
+
+			var host = location.protocol + "//" + location.hostname + location.pathname;
+			if(BrowserDetect.browser == "Explorer" || (BrowserDetect.browser == "Mozilla" && BrowserDetect.version == 11)) {
+				window.location = host + "disclaimer.html";
+			} else {
+				window.location = host + "game.html";
+			}
 
 		</script>
 	</head>
